--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 
 [dependencies]
 chrono = { version = "0.4", features = ["serde"] }
+postgres-types = { version = "0.2", features = ["derive", "with-chrono-0_4"] }
 csv = "1.3"
 futures = "0.3"
 heed = "0.20"
