--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,3 +34,8 @@ rdkafka = { version = "0.36", features = ["cmake-build", "ssl-vendored", "gssapi
 tokio-test = "0.4"
 mockall = "0.12"
 tempfile = "3.10"
+criterion = { version = "0.5", features = ["html_reports"] }
+
+[[bench]]
+name = "performance_benchmark"
+harness = false
