--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,7 +19,7 @@ thiserror = "1.0"
 tokio = { version = "1", features = ["full"] }
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
-zip = "0.6"
+zip = "0.5"
 tempfile = "3.10.1"
 rayon = "1.10"
 tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
@@ -29,6 +29,7 @@ tokio-postgres = "0.7"
 deadpool-postgres = "0.10"
 toml = "0.8"
 rdkafka = { version = "0.36", features = ["cmake-build", "ssl-vendored", "gssapi-vendored"] }
+warp = "0.3"
 
 [dev-dependencies]
 tokio-test = "0.4"
