--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,7 @@ serde_json = "1.0"
 tokio-postgres = "0.7"
 deadpool-postgres = "0.10"
 toml = "0.8"
+dashmap = "5.5"
 rdkafka = { version = "0.36", features = ["cmake-build", "ssl-vendored", "gssapi-vendored"] }
 warp = "0.3"
 
