--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,7 @@ toml = "0.8"
 dashmap = "6.1"
 rdkafka = { version = "0.36", features = ["cmake-build", "ssl-vendored", "gssapi-vendored"] }
 warp = "0.3"
+tdigest = "0.2"
 
 [dev-dependencies]
 tokio-test = "0.4"
@@ -41,3 +42,12 @@ criterion = { version = "0.5", features = ["html_reports"] }
 [[bench]]
 name = "performance_benchmark"
 harness = false
+
+# PHASE 11 OPTIMIZATION: Maximum performance compiler settings
+[profile.release]
+lto = "fat"                    # Full Link Time Optimization
+codegen-units = 1              # Single codegen unit for better optimization
+panic = "abort"                # Remove panic handling overhead
+opt-level = 3                  # Maximum optimization level
+
+# Target native CPU for maximum SIMD utilization (use RUSTFLAGS="--cfg target-cpu=native" cargo build --release)
