--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,6 +32,11 @@ dashmap = "6.1"
 rdkafka = { version = "0.36", features = ["cmake-build", "ssl-vendored", "gssapi-vendored"] }
 warp = "0.3"
 tdigest = "0.2"
+prometheus = "0.13"
+hyper = { version = "1.0", features = ["full"] }
+hyper-util = { version = "0.1", features = ["full"] }
+http-body-util = "0.1"
+tokio-metrics = "0.3"
 
 [dev-dependencies]
 tokio-test = "0.4"
