--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,7 +36,8 @@ prometheus = "0.13"
 hyper = { version = "1.0", features = ["full"] }
 hyper-util = { version = "0.1", features = ["full"] }
 http-body-util = "0.1"
-tokio-metrics = "0.3"
+tokio-metrics = { version = "0.3", features = ["rt"] }
+num_cpus = "1.16"
 
 [dev-dependencies]
 tokio-test = "0.4"
