Implement volume profile validation with comprehensive tests
- Add volume profile statistical validation after gap detection
- Dual storage: LMDB + PostgreSQL message handlers
- 12 test functions covering all validation scenarios
- Fix 6 clippy warnings for zero warnings compliance
- Performance: validates 1000 candles in <1s

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,6 +39,10 @@ http-body-util = "0.1"
 tokio-metrics = { version = "0.3", features = ["rt"] }
 num_cpus = "1.16"
 
+[features]
+default = []
+postgres-tests = []
+
 [dev-dependencies]
 tokio-test = "0.4"
 mockall = "0.12"
