Performance improvements and add volume profile indicator

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,7 @@ rayon = "1.10"
 tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
 futures-util = "0.3"
 serde_json = "1.0"
+simd-json = "0.13"
 tokio-postgres = "0.7"
 deadpool-postgres = "0.10"
 toml = "0.8"
@@ -39,6 +40,8 @@ hyper-util = { version = "0.1", features = ["full"] }
 http-body-util = "0.1"
 tokio-metrics = { version = "0.3", features = ["rt"] }
 num_cpus = "1.16"
+ahash = "0.8"
+libc = "0.2"
 
 [features]
 default = []
@@ -78,3 +81,15 @@ opt-level = 3                  # Maximum optimization level
 [[bin]]
 name = "test_tdigest_performance"
 path = "test_tdigest_performance.rs"
+
+[[bin]]
+name = "profile_workload"
+path = "src/bin/profile_workload.rs"
+
+[[bin]]
+name = "cpu_profile"
+path = "src/bin/cpu_profile.rs"
+
+[[bin]]
+name = "validate_optimizations"
+path = "src/bin/validate_optimizations.rs"
