--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,6 +34,8 @@ dashmap = "6.1"
 rdkafka = { version = "0.36", features = ["cmake-build", "ssl-vendored", "gssapi-vendored"] }
 warp = "0.3"
 tdigest = "0.2"
+rust_decimal = { version = "1.36", features = ["serde", "db-postgres"] }
+rust_decimal_macros = "1.36"
 prometheus = "0.13"
 hyper = { version = "1.0", features = ["full"] }
 hyper-util = { version = "0.1", features = ["full"] }
