--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,9 +23,17 @@ tracing-appender = "0.2"
 zip = "4.3"
 tempfile = "3.10.1"
 rayon = "1.10"
-tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
+fastwebsockets = { version = "0.6", features = ["upgrade"] }
+http = "1.0"
+crossbeam-channel = "0.5"
+sharded-slab = "0.1"
+sonic-rs = "0.3"
+url = "2.5"
+bytes = "1.8"
 futures-util = "0.3"
 serde_json = "1.0"
+tokio-native-tls = "0.3"
+native-tls = "0.2"
 simd-json = "0.13"
 tokio-postgres = { version = "0.7", optional = true }
 deadpool-postgres = { version = "0.10", optional = true }
@@ -86,7 +94,7 @@ opt-level = 3                  # Maximum optimization level
 
 [[bin]]
 name = "test_tdigest_performance"
-path = "test_tdigest_performance.rs"
+path = "tests/performance/test_tdigest_performance.rs"
 
 [[bin]]
 name = "profile_workload"
