Performance improvements and add volume profile indicator

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ heed = "0.22"
 kameo = "0.14"
 reqwest = { version = "0.12", features = ["blocking", "json"] }
 rustc-hash = "2.1"
+foldhash = "0.1"
 serde = { version = "1.0", features = ["derive"] }
 sha2 = "0.10"
 thiserror = "2.0"
@@ -28,6 +29,7 @@ http = "1.0"
 crossbeam-channel = "0.5"
 sharded-slab = "0.1"
 sonic-rs = "0.3"
+rkyv = "0.7"
 url = "2.5"
 bytes = "1.8"
 futures-util = "0.3"
@@ -37,6 +39,7 @@ native-tls = "0.2"
 simd-json = "0.13"
 tokio-postgres = { version = "0.7", optional = true }
 deadpool-postgres = { version = "0.10", optional = true }
+parking_lot = "0.12"
 toml = "0.8"
 dashmap = "6.1"
 rdkafka = { version = "0.36", features = ["cmake-build", "ssl-vendored", "gssapi-vendored"], optional = true }
@@ -51,6 +54,7 @@ http-body-util = "0.1"
 tokio-metrics = { version = "0.3", features = ["rt"] }
 num_cpus = "1.16"
 ahash = "0.8"
+ureq = "2.9"
 libc = "0.2"
 
 [features]
@@ -69,6 +73,10 @@ criterion = { version = "0.5", features = ["html_reports"] }
 
 [[bench]]
 name = "performance_benchmark"
+harness = false
+
+[[bench]]
+name = "library_migration_benchmark_fixed"
 harness = false
 
 # PHASE 11 + SIMD OPTIMIZATION: Maximum performance compiler settings
